syntax = "proto3";

package framepb;

//--------------c2s-------------------

message c2s_client_session_ping {

} 

message s2c_client_session_pong {

} 

enum eClient2GameMsgId{
    cs_invalid_msg_id             = 0;

    cs_logic_min_msg_id        = 1;
    sc_logic_max_msg_id        = 60000;

    cs_engine_min_msg_id       = 60001; 
    c2s_client_session_ping_id = 60002;
    s2c_client_session_pong_id = 60003;
    sc_engine_min_msg_id       = 65535; 
}


//--------------s2s-------------------

message s2s_server_session_veriry_req{
    uint64 server_id = 1;
    uint32 server_type = 2; 
    string server_type_str = 3; 
    string ip = 4; 
    string token = 5; 
}

message s2s_server_session_veriry_ack{
    
}

message s2s_server_session_ping{
    
}

message s2s_server_session_pong{
    
}

message s2s_client_session_ping {

}

message s2s_client_session_pong {
    
}

//------------sg-------------
message sd_conn_attr {
    uint64 server_id = 1;
    uint32 server_type = 2; 
    string server_type_str = 3; 
    string inter = 4; 
    string outer = 5; 
    string token = 6; 
}

message service_discovery {
    uint64 server_id = 1;
    string s2s_inter_listen = 2; 
    string s2s_outer_listen = 3;
    string s2s_http_surl = 4; 
    string s2s_http_curl1 = 5; 
    string s2s_http_curl2 = 6; 
    repeated sd_conn_attr conn_list = 7; 
    string  c2s_inter_listen = 8; 
    string  c2s_outer_listen = 9;    
    string  c2s_https_url = 10; 
    string  c2s_https_cert = 11; 
    string  c2s_https_key = 12; 
    string  sdk_tcp_inter = 13; 
    string  sdk_tcp_out   = 14; 
    string  sdk_https_urtl = 15; 
    string  sdk_https_cert = 16; 
    string  sdk_https_key  = 17; 
}

message service_discovery_req {
    uint64 server_id = 1;
    string token = 2; 
}

message service_discovery_ack {
    bool rebuild_flag = 1; 
    bool verify_flag = 2; 
    service_discovery sd_info = 3;
}
//------------sg-------------

enum S2SBaseMsgId{
    s2s_invalid_msg_id             = 0;

    s2s_engine_min_msg_id          = 1; 

    s2s_server_session_veriry_req_id = 2;
    s2s_server_session_veriry_ack_id = 3; 
    s2s_server_session_ping_id = 4;
    s2s_server_session_pong_id = 5; 
    s2s_client_session_ping_id = 6; 
    s2s_client_session_pong_id = 7; 
    service_discovery_req_id = 8;
    service_discovery_ack_id = 9;          
    s2s_engine_max_msg_id          = 300;
}

